# MockEtlFrameworkPython

./: .gitignore  README.md  appsettings.json  cli.py  pyproject.toml
Documentation/: Architecture.md  README.md  cli.md  configuration.md  dataframes.md  env-vars.md  overview.md  testing.md
Documentation/control/: job-executor-service.md  overview.md  task-queue-service.md
Documentation/modules/: csv-file-writer.md  data-frame-writer.md  data-sourcing.md  external.md  overview.md  parquet-file-writer.md  transformation.md
JobExecutor/Jobs/: account_balance_snapshot.json  account_customer_join.json  account_overdraft_history.json  account_status_summary.json  account_type_distribution.json  account_velocity_tracking.json  bond_maturity_schedule.json  branch_card_activity.json  branch_directory.json  branch_transaction_volume.json  branch_visit_log.json  branch_visit_purpose_breakdown.json  branch_visit_summary.json  branch_visits_by_customer_csv_append_trailer.json  card_authorization_summary.json  card_customer_spending.json  card_expiration_watch.json  card_fraud_flags.json  card_spending_by_merchant.json  card_status_snapshot.json  card_transaction_daily.json  card_type_distribution.json  communication_channel_map.json  compliance_event_summary.json  compliance_open_items.json  compliance_resolution_time.json  compliance_transaction_ratio.json  (+76 more)
tests/: conftest.py  test_app_config.py  test_csv_file_writer.py  test_data_sourcing.py  test_dataframe_ops.py  test_module_factory.py  test_parquet_file_writer.py  test_transformation.py  test_v4_jobs.py
(+18 files in other folders)
